--- a/templates/pack.sh.j2
+++ b/templates/pack.sh.j2
@@ -1,16 +1,16 @@
 #!/bin/sh
 
-git clone {{ eher_package_git_repo }} {{ eher_package_build_path }}/{{ eher_package_name }}
-cd {{ eher_package_build_path }}/{{ eher_package_name }}
+git clone {{ eher_package_server_git_repo }} {{ eher_package_server_build_path }}/{{ eher_package_server_name }}
+cd {{ eher_package_server_build_path }}/{{ eher_package_server_name }}
 
-git checkout {{ eher_package_git_branch|default('master') }}
+git checkout {{ eher_package_server_git_branch|default('master') }}
 
-{{ eher_package_build_command|default('') }}
+{{ eher_package_server_build_command|default('') }}
 
-fpm -s dir -t deb -n {{ eher_package_name }} --prefix {{ eher_package_destination_prefix|default('/usr/local/' + eher_package_name) }} -v 1.0 --iteration $(date +"%Y%m%d%H%M%S") .
+fpm -s dir -t deb -n {{ eher_package_server_name }} --prefix {{ eher_package_server_destination_prefix|default('/usr/local/' + eher_package_server_name) }} -v 1.0 --iteration $(date +"%Y%m%d%H%M%S") .
 mv *.deb /var/www/packages
 
 cd /var/www/packages
 dpkg-scanpackages -m . /dev/null | gzip -9c > Packages.gz
 
-rm -rf {{ eher_package_build_path }}/{{ eher_package_name }}
+rm -rf {{ eher_package_server_build_path }}/{{ eher_package_server_name }}
