--- a/templates/pack.sh.j2
+++ b/templates/pack.sh.j2
@@ -7,7 +7,7 @@ git checkout {{ eher_package_server_git_branch|default('master') }}
 
 {{ eher_package_server_build_command|default('') }}
 
-fpm -s dir -t deb -n {{ eher_package_server_name }} --prefix {{ eher_package_server_destination_prefix|default('/usr/local/' + eher_package_server_name) }} -v 1.0 --iteration $(date +"%Y%m%d%H%M%S") .
+fpm -s dir -t deb -n {{ eher_package_server_name }} --prefix {{ eher_package_server_destination_prefix|default('/usr/local/' + eher_package_server_name) }} -v 1.0 --iteration $(date +"%Y%m%d%H%M%S") --after-install {{ eher_package_server_build_path }}/{{ eher_package_server_name }}_after-install.sh .
 mv *.deb /var/www/packages
 
 cd /var/www/packages
